# postmanparser

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: pypi_publish.yaml  test.yml
postmanparser/: __init__.py  auth.py  certificate.py  collection.py  constants.py  cookie.py  description.py  event.py  exceptions.py  form_parameter.py  info.py  item.py  key_val.py  proxy_config.py  request.py  response.py  url.py  variable.py
scripts/: deploy.sh
tests/: conftest.py  mock_server.py  test_collection_auth.py  test_collection_event.py  test_collection_info.py  test_collection_item.py  test_collection_parse_url.py  test_collection_request.py  test_collection_response.py  test_collection_url_variable.py  test_collection_variable.py  test_postmanparser.py
tests/data/: collection-request.json
