[tool.poetry]
name = "postmanparser"
version = "0.1.0"
description = ""
authors = ["Appknox <engineering@appknox.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^21.5b1"
flake8 = "^3.9.2"
coverage = "^5.5"
httpx = "^0.18.1"
respx = "^0.17.0"
flake8-import-order = "^0.18.1"
zimports = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
