[tool.poetry]
name = "postmanparser"
version = "0.1.9"
description = "Postman collection parser for python"
authors = ["Appknox <engineering@appknox.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/appknox/postmanparser"
keywords = ["postman", "appknox", "postmanparser"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools"
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.27.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b1"
zimports = "^0.4.0"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^21.4.3"
coverage = "^5.5"
respx = "^0.17.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
