[tool.poetry]
name = "postmanparser"
version = "0.1.9"
description = "Postman collection parser for python"
authors = ["Appknox <engineering@appknox.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/appknox/postmanparser"
keywords = ["postman", "appknox", "postmanparser"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools"
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.3"
pytest = "^8.3.4"  # Updated
black = "^23.9.1"  # Updated
zimports = "^0.4.0"
coverage = "^7.4.0"  # Updated
respx = "^0.20.2"  # Updated

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
